<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">My Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="degree_sign">°</string>
    <string name="title_activity_detai">DetaiActivity</string>
    <string name="update_forecast">Update forecast</string>

    <string name="share_action">Share</string>

    <string name="pref_location">Your location</string>
    <string name="pref_location_default">Vinnytsya</string>
    <string name="pref_location_key">pref_location_key</string>

    <string name="pref_units">Units</string>
    <string name="pref_units_metric">Metric</string>

    <string name="pref_units_imperial_entry">imperial</string>
    <string name="pref_units_metric_entry">metric</string>

    <string name="pref_units_key">pref_units_key</string>
    <string-array name="pref_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_units_entries_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="detail_fragment">Detail info</string>
    <string name="action_map">Map Location</string>
    <string name="test_max_temp">21°</string>
    <string name="test_min_temp">15°</string>
    <string name="test_date">Wednesday</string>
    <string name="test_weather_desc">Cloudy</string>
    <string name="test_today_date">Today</string>
    <string name="test_month_date">June 21</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="humidity">Humidity: <xliff:g id="humidity_id">%1$s</xliff:g> %%</string>
    <string name="wind_speed">Wind\'s speed: <xliff:g id="wind_speed_id">%1$s</xliff:g> km/h NW</string>
    <string name="pressure">Pressure: <xliff:g id="pressure_id">%1$s</xliff:g> hPa</string>
    <string name="internet_error">Check the internet connection</string>

    <string name="sync_account_type">weathercloud.serhiy.mlsdev.com</string>
    <string name="content_authority">com.mlsdev.serhiy.weathercloud.app</string>
    <string name="image_content_desc">weather icon</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    
    <string name="pref_location_status_key" translatable="false">location-status</string>
</resources>
