<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher"/>
    
    <LinearLayout
        android:id="@+id/ll_weather_desc"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="match_parent">
        
        <TextView
            android:id="@+id/tv_date_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/test_date"/>

        <TextView
            android:id="@+id/tv_weather_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="@string/test_weather_desc"/>
        
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_temp_desc"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_max_temp_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/test_max_temp"/>

        <TextView
            android:id="@+id/tv_min_temp_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/test_min_temp"/>

    </LinearLayout>
        
</LinearLayout>