<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingLeft="60dp"
    android:paddingTop="20dp"
    android:background="@drawable/toolbar_bg">

    <LinearLayout
        android:id="@+id/ll_weather_data_today_item"
        android:orientation="vertical"
        android:layout_width="155dp"
        android:gravity="center"
        android:layout_height="match_parent">
        
        <TextView
            android:id="@+id/tv_date_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:text="@string/test_today_date"/>
        
        <TextView
            android:id="@+id/tv_max_temp_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:text="@string/test_max_temp"/>

        <TextView
            android:id="@+id/tv_min_temp_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:text="@string/test_max_temp"/>
        
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weather_icon_today_item"
        android:orientation="vertical"
        android:layout_width="145dp"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_weather_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher"
            android:padding="10dp"/>
        
        <TextView
            android:id="@+id/tv_weather_in_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textSize="22sp"
            android:text="@string/test_weather_desc"/>
    </LinearLayout>
    
</LinearLayout>